--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+EpistemicNetworkAnalysis = "c00a38d3-3ee6-47f0-934a-5622ac45083d"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -11,3 +12,10 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1.6"
+CSV = "0.9.11"
+Colors = "0.12.8"
+DataFrames = "1.3.1"
+GLM = "1.5.1"
+HypothesisTests = "0.10.6"
+MultivariateStats = "0.8.0"
+Plots = "1.25.3"
